--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-under construction..
+<!DOCTYPE>
+<html>
+<head>
+<title>Under Construction</title>
+</head>
+<bodyd>
+<h2>This page is under construction</h2>
+</body>
+</html>
