--- a/index.html
+++ b/index.html
@@ -1,9 +1,51 @@
-<!DOCTYPE>
-<html>
+
+
+<!doctype html>
+<html lang="en-US">
 <head>
-<title>Under Construction</title>
+<meta charset="utf-8">
+<meta http-equiv="X-UA-Compatible" content="chrome=1">
+<title>@me | Sheetal Baheti</title>
+<meta property="og:locale" content="en_US" />
+<link rel="canonical" href="https://sheetalbaheti.com/" />
+<meta property="og:url" content="https://sheetalbaheti.com/" />
+<meta property="og:site_name" content="Sheetal Baheti" />
+<script type="application/ld+json">
+{"name":"Sheetal Baheti","description":null,"author":null,"@type":"WebSite","url":"https://sheetalbaheti.com/","image":null,"publisher":null,"headline":"@me","dateModified":null,"datePublished":null,"sameAs":null,"mainEntityOfPage":null,"@context":"http://schema.org"}</script>
+<link rel="stylesheet" href="/assets/css/style.css?v=1e44d9a3bf5ee1dd8ad43f388740538a33b138e7">
+<meta name="viewport" content="width=device-width">
+<!--[if lt IE 9]>
+    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
 </head>
-<bodyd>
-<h2>This page is under construction</h2>
+<body>
+<div class="wrapper">
+<header>
+<h1>Sheetal Baheti</h1>
+<p></p>
+<p class="view"><a href="https://github.com/angeleno">View My GitHub Profile</a></p>
+</header>
+<section>
+<h2 id="me">@me</h2>
+<p>I am <a href="https://sheetalbaheti.com">Sheetal Baheti</a>, an Engineer by profession and currently a house wife and mother.
+I have done my engineering from Government college of Engineering, Amravati. Born and brought up in Amravati, I moved to Pune after my engineering for my job. Worked at Wipro and met Sarang there. I stayed there for 4 years.
+Before moving to California I was in Singapore for a year.</p>
+<hr />
+<p>you can reach me at: Sheetal ^at^ nullptr ^dot^ me</p>
+<script>
+(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+ga('create', 'UA-113947738-1', 'auto');
+ga('send', 'pageview');
+</script>
+</section>
+<footer>
+<p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
+</footer>
+</div>
+<script src="/assets/js/scale.fix.js"></script>
 </body>
 </html>
