--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <header>
 <h1>Sheetal Baheti</h1>
 <p></p>
-<p class="view"><a href="https://github.com/angeleno">View My GitHub Profile</a></p>
+<p class="view"><a href="https://github.com/sheetalbaheti">View My GitHub Profile</a></p>
 </header>
 <section>
 <h2 id="me">@me</h2>
