--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 
     <link rel="stylesheet" href="/assets/css/style.css?v=15399c43af4aee06b45ad8f41f52b895b622b474">
     <meta name="viewport" content="width=device-width">
+    <meta name="cf-2fa-verify" content="02165cdacbbadf4">
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
